--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - db
     container_name: web
     env_file: .env
+    environment:
+      - LOCAL=1
     ports:
       - ${PORT}:${PORT}
     # restart: always
